--- a/my-architecture-portfolio/src/App.css
+++ b/my-architecture-portfolio/src/App.css
@@ -28,6 +28,10 @@
   color: #61dafb;
 }
 
+.main-content {
+  padding-top: 60px; /* Stellen Sie sicher, dass dies der Höhe Ihrer Navbar entspricht */
+}
+
 @keyframes App-logo-spin {
   from {
     transform: rotate(0deg);
