--- a/my-architecture-portfolio/src/components/Projekte.css
+++ b/my-architecture-portfolio/src/components/Projekte.css
@@ -18,7 +18,8 @@
   }
   
   .projekt-image {
-    background-size: cover;
+    background-size: contain;
+    background-repeat: no-repeat;
     background-position: center;
     height: 200px; /* Höhe der Bilder */
     transition: transform 0.3s ease, box-shadow 0.3s ease;
