--- a/my-architecture-portfolio/src/components/Datenschutz.css
+++ b/my-architecture-portfolio/src/components/Datenschutz.css
@@ -1,9 +1,10 @@
 /* Datenschutz.css */
 .container {
-    max-width: 800px; /* oder die gewünschte Breite */
-    margin: 0 auto; /* Zentriert den Container */
-    padding: 20px; /* Fügt etwas Platz innerhalb des Containers hinzu */
-    text-align: left; /* Setzt den Textfluss auf linksbündig */
+    max-width: 960px;
+    margin: 0 auto;
+    padding: 20px;
+    text-align: left;
+    background-color: #ffffff;
   }
   
   /* Optional: Allgemeine Stilregeln für Überschriften und Absätze */
@@ -13,4 +14,8 @@
   
   ul {
     padding-left: 20px; /* Fügt Platz vor der Aufzählungsliste hinzu */
+  }
+
+  body {
+    background-color: #f5f5f5;
   }
