--- a/my-architecture-portfolio/src/components/Projektdetails.css
+++ b/my-architecture-portfolio/src/components/Projektdetails.css
@@ -1,9 +1,10 @@
 /* ProjektDetails.css */
 .projekt-details-container {
-    max-width: 800px;
+    max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
     text-align: left;
+    background-color: #ffffff;
   }
   
   .projekt-image-container {
@@ -14,3 +15,6 @@
     margin-top: 20px;
   }
   
+  body {
+    background-color: #f5f5f5;
+  }
