--- a/my-architecture-portfolio/src/components/Projekte.css
+++ b/my-architecture-portfolio/src/components/Projekte.css
@@ -1,37 +1,33 @@
 /* Projekte.css */
 .projekte-container {
-  text-align: center;
-  max-width: 800px;
+  max-width: 1200px;
   margin: 0 auto;
   padding: 20px;
+  text-align: left;
+  background-color: #ffffff;
 }
 
 .projekte-grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+  grid-template-columns: repeat(2, 1fr); /* Setzt zwei Spalten mit gleicher Breite */
   gap: 20px;
 }
 
 .projekt-item {
   position: relative;
   overflow: hidden;
-  border-radius: 8px; /* Optional: für abgerundete Ecken */
+  border-radius: 8px;
 }
 
 .projekt-image {
   background-size: cover;
   background-repeat: no-repeat;
   background-position: center;
-  height: 200px; /* Höhe der Bilder */
+  height: 350px; 
   transition: transform 0.3s ease, box-shadow 0.3s ease;
   display: flex;
   justify-content: center;
   align-items: center;
-}
-
-.projekt-item:hover .projekt-image {
-  transform: scale(1.05);
-  box-shadow: 0px 4px 20px rgba(0, 0, 0, 0.1);
 }
 
 .overlay {
@@ -48,9 +44,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  font-size: 18px;
+  font-size: 24px;
 }
 
 .projekt-item:hover .overlay {
   opacity: 1;
+}
+
+body {
+  background-color: #f5f5f5;
 }
