--- a/my-architecture-portfolio/src/components/Navbar.css
+++ b/my-architecture-portfolio/src/components/Navbar.css
@@ -44,3 +44,39 @@
 .navbar-item.active {
   border-bottom: 2px solid #fff;
 }
+
+/* Hamburger-Menü-Button */
+.hamburger {
+  display: none; /* Standardmäßig versteckt */
+  flex-direction: column;
+  justify-content: space-around;
+  width: 30px;
+  height: 25px;
+  background: transparent;
+  border: none;
+  cursor: pointer;
+}
+
+.hamburger-line {
+  width: 100%;
+  height: 2px;
+  background-color: white;
+}
+
+/* Media Query für mobile Geräte */
+@media screen and (max-width: 768px) {
+  .hamburger {
+    display: flex; /* Zeigt den Hamburger-Button auf kleinen Bildschirmen an */
+  }
+
+  .navbar-menu {
+    display: none; /* Versteckt die Menüpunkte */
+    flex-direction: column; /* Stapelt die Links vertikal */
+    align-items: center;
+    width: 100%;
+  }
+
+  .navbar-menu.expanded {
+    display: flex; /* Zeigt das Menü, wenn es erweitert ist */
+  }
+}
