--- a/my-architecture-portfolio/src/components/Projekte.css
+++ b/my-architecture-portfolio/src/components/Projekte.css
@@ -17,6 +17,7 @@
   position: relative;
   overflow: hidden;
   border-radius: 8px;
+  border: 2px solid #333; /* Rahmen in der Farbe der Navbar */
 }
 
 .projekt-image {
@@ -24,10 +25,12 @@
   background-repeat: no-repeat;
   background-position: center;
   height: 350px; 
-  transition: transform 0.3s ease, box-shadow 0.3s ease;
+  transition: transform 0.3s ease,
+  box-shadow 0.3s ease;
   display: flex;
   justify-content: center;
   align-items: center;
+  border-radius: 8px; /* Abgerundete Ecken beibehalten */
 }
 
 .overlay {
@@ -53,4 +56,15 @@
 
 body {
   background-color: #f5f5f5;
+}
+
+@media screen and (max-width: 768px) {
+  .projekte-grid {
+    grid-template-columns: 1fr; /* Nur eine Spalte für mobile Ansicht */
+  }
+
+  /* Anpassungen für den Overlay-Text, wenn nötig */
+  .overlay {
+    font-size: 20px; /* Kleinere Schriftgröße für mobile Geräte */
+  }
 }
