--- a/my-architecture-portfolio/src/components/Home.css
+++ b/my-architecture-portfolio/src/components/Home.css
@@ -6,51 +6,70 @@
   text-align: left;
   background-color: #ffffff;
 }
-  
-  .slide {
-    position: relative;
-    height: 300px; /* Stellen Sie die gewünschte Höhe ein */
-    background-size: cover;
-    background-position: center;
-    margin: 0 15px; /* Fügen Sie Seitenabstand hinzu, wenn Sie variableWidth entfernen */
-  }
-  
-  .slide.active .overlay {
-    opacity: 1; /* Overlay nur auf aktiven Slide sichtbar machen */
-  }
-  
-  .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background-color: rgba(0, 0, 0, 0.5);
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 20px;
-    color: white;
-    opacity: 0; /* Standardmäßig unsichtbar */
-    transition: opacity 0.5s ease;
-  }
-  
-  @media (max-width: 768px) {
-    .home-container {
-      padding: 10px;
-    }
-  
-    .slide {
-      height: 200px;
-      margin: 0 10px;
-    }
-  
-    .slide.active .overlay {
-      opacity: 1;
-    }
+
+.slide {
+  position: relative;
+  height: 550px; /* Vergrößerte Höhe */
+  background-size: cover;
+  background-position: center;
+  margin: 0 15px;
+}
+
+.slide.active .overlay {
+  opacity: 1;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 20px;
+  color: white;
+  opacity: 0;
+  transition: opacity 0.5s ease;
+}
+
+.slick-prev,
+.slick-next {
+  font-size: 30px;
+  color: white; /* Änderung der Pfeilfarbe für bessere Sichtbarkeit */
+  z-index: 10; /* Erhöht den z-Index, um Überlappungen zu vermeiden */
+  top: 50%;
+  transform: translate(0, -50%);
+  background-color: rgba(0, 0, 0, 0.8); /* Dunkler Hintergrund für die Pfeile */
+  border-radius: 50%; /* Kreisförmige Pfeile */
+  padding: 10px; /* Abstand im Inneren der Pfeile */
+}
+
+.slick-prev:hover,
+.slick-next:hover {
+  background-color: rgba(0, 0, 0, 1); /* Dunkler Hintergrund beim Hover */
+}
+
+.slick-prev {
+  left: -50px; /* Abstand vom linken Rand */
+}
+
+.slick-next {
+  right: -50px; /* Abstand vom rechten Rand */
+}
+
+@media (max-width: 768px) {
+  .home-container {
+    padding: 10px;
   }
 
-  body {
-    background-color: #f5f5f5;
+  .slide {
+    height: 300px; /* Kleinere Höhe für kleinere Bildschirme */
   }
-  
+}
+
+body {
+  background-color: #f5f5f5;
+}
