Home.js mobil angepasst

--- a/my-architecture-portfolio/src/components/Home.css
+++ b/my-architecture-portfolio/src/components/Home.css
@@ -99,6 +99,7 @@ border: none;
     
     .slide {
     height: 300px; /* Kleinere Höhe der Slides auf mobilen Geräten */
+    margin: 0;
     }
     }
     
